style.css
/* ... */
header nav a.navLink::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -4px;

    width: 100%;
    height: 1px;
    background-color: currentColor;

    transform: scaleX(0);
    transform-origin: left;
    transition: transform 0.3s ease;
}

/* hover */
header nav a.navLink:hover::after {
    transform: scaleX(1);
}

main {
    overflow: hidden;
    width: 100%;
}

section.hero {
    display: flex;
    justify-content: space-between;
    margin-top: 155px;
    gap: 145px;
    width: 100%;
    position: relative;
}

section.hero .leftLines,
section.hero .rightLines {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: clamp(0px, 7.6vw, 110px);
}

section.hero .leftLines .line-wrapper,
section.hero .rightLines .line-wrapper {
    width: 100%;
}

section.hero .leftLines svg,
section.hero .rightLines svg {
    width: 100% !important;
    height: 90% !important;
}

section.hero .cameraImage {
    min-width: 188px;
    width: 23%;
    z-index: 999;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1);
    transition: transform 0.6s ease;
    transform-origin: center;
}

section.hero .cameraImage.flash {
  transform: translate(-50%, -50%) scale(1.3);
}

.svg-container {
    min-width: 235px;
    width: 30%;
    position: relative;
}

#mySVG path {
    opacity: 0;
}

.svgCursor {
    position: absolute;
    width: 2px;
    height: 34px;
    background: black;
    animation: blink 0.7s step-start infinite;
    top: 0;
    left: 0;
}

.flash-overlay {
  position: fixed;
  inset: 0;
  background: white;
  opacity: 0;
  pointer-events: none;
  z-index: 9998;
}

.flash-overlay.active {
  animation: flash 0.4s ease;
}

.line-wrapper {
    position: relative;
}

.line-wrapper svg {
    overflow: visible;
}

.line-wrapper svg circle {
    transition: all 0.5s;
}

.labelBox {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
}

.label {
  white-space: nowrap;
  transform-origin: center;
  transition: transform 0.5s;
  background-color: var(--background-color);
  font-size: var(--fs14);
  font-weight: 300;
  line-height: 1;
  letter-spacing: -0.42px;
  border: 1px #ECECEC solid;
  border-radius: 12px;
  padding: 4px 8px;
}

.line-wrapper.tl .labelBox {
    top: -13px;
    right: 100px;
    gap: clamp(
        20px,
        calc(20px + (160 - 20) * ((100vw - 1024px) / 416)),
        160px
    );
}

.line-wrapper.bl .labelBox {
    bottom: 0;
    right: 100px;
    gap: clamp(
        20px,
        calc(20px + (110 - 20) * ((100vw - 1024px) / 416)),
        110px
    );
}

.line-wrapper.tr .labelBox {
    flex-direction: row-reverse;
    top: -13px;
    left: 100px;
    gap: clamp(
        20px,
        calc(20px + (110 - 20) * ((100vw - 1024px) / 416)),
        110px
    );
}

.line-wrapper.br .labelBox {
    flex-direction: row-reverse;
    left: 100px;
    bottom: 0;
    gap: clamp(
        20px,
        calc(20px + (78 - 20) * ((100vw - 1024px) / 416)),
        78px
    );
}

.label.active { transform: scale(1.2); }
.marker.active { fill: var(--text-color); }

.base-path {
  stroke-width: 1;
}

.progress-path {
  stroke-width: 1;
  stroke-dasharray: none;
  transition: none;
  stroke-linecap: round;
  will-change: stroke-dashoffset;
}

section.applyNow {
    gap: 40px;
    margin-top: 80px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

section.applyNow p {
    text-align: center;
    color: var(--text-color);
    line-height: 1.1;
    font-weight: 400;
    font-size: var(--fs16);
    width: 22%;
    display: inline-block;
    position: relative;
    animation: dropAndOpacity 1.2s forwards;
}

.applyNowButton {
    background-color: var(--black);
    color: var(--background-color);
    padding: 12px 24px;
    border-radius: 12px;
    font-weight: 500;
    font-size: var(--fs14);
    line-height: 1;
    letter-spacing: -0.42px;
    position: relative;
    animation: upAndOpacity 1.2s forwards;
    z-index: 10;
    transition: all 0.5s;
}

.applyNowButton:hover {
    background-color: #C2C2C2;
    color: var(--text-color);
}

section.advantages.tablet {
    display: none;
}

section.advantages {
    overflow: hidden;
    position: relative;
    width: 100%;
    height: 292px;
    display: flex;
    align-items: end;
    justify-content: space-between;
    gap: 20px;
    margin-top: 80px;
    padding: 20px 40px;
    background-color: var(--white);    
}

section.advantages .plug {
    background-color: #F3F3F3;
    width: 2px;
    height: 100%;
    border-radius: 990px;
}

section.advantages img.line {
    opacity: 0.11;
    position: absolute;
    width: 546px;
    height: 682px;
}

section.advantages img.line.left {
    left: -100px;
    bottom: -150px;
    transform: rotate(120deg);
}

section.advantages img.line.right {
    bottom: -150px;
    right: -150px;
    transform: rotate(40deg);
}

section.advantages article .textbox{
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: start;
    gap: 24px;
    width: 100%;
}

section.advantages article .textbox .titleText {
    font-weight: 400;
    white-space: nowrap;
    font-size: var(--fs48);
    letter-spacing: -0.96px;
    line-height: 1.1;
}

section.advantages article .textbox p.titleText,
section.advantages article .textbox p.descriptionText {
    white-space: wrap;
    font-size: var(--fs16);
    line-height: 1.2;
    letter-spacing: -0.32px;
}

section.aboutUs {
    padding: 0 40px;
    margin-top: 120px;
    gap: 44px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

section.aboutUs .imageBox {
    display: flex;
}

section.aboutUs .imageBox img.aboutImage {
    max-height: 368px;
    height: 100%;
    width: auto;
    object-fit: contain;
}
/* ... */

